fix color contrast

--- a/_sass/color_schemes/dark.scss
+++ b/_sass/color_schemes/dark.scss
@@ -71,3 +71,8 @@ $label-color: $grey-lt-000;
 $table-background-color: #232323;
 $code-color: #ffe9ec;
 $code-bg-color: #796366;
+
+$warning-link-color: #a0baff;
+$warning-link-hover-color: #a0baff;
+
+$warning-color: #FFFFFF;
