--- a/_sass/color_schemes/light.scss
+++ b/_sass/color_schemes/light.scss
@@ -37,3 +37,8 @@ $label-color: #717171;
 $table-background-color: #fdfdfd;
 $code-color: #c7254e;
 $code-bg-color: #f9f2f4;
+
+$warning-link-color: #28478F;
+$warning-link-hover-color: #2F53A7;
+
+$warning-color: #575757;
